[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aljazeera360-mcp"
version = "2.0.0"
description = "MCP server for Al Jazeera 360 — Connect AI assistants to Al Jazeera's streaming catalog"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ahmed Amin", email = "ahmedaminsa@users.noreply.github.com" },
]
keywords = ["mcp", "aljazeera", "arabic", "streaming", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/ahmedaminsa/aljazeera360-mcp-server"
Repository = "https://github.com/ahmedaminsa/aljazeera360-mcp-server"
Issues = "https://github.com/ahmedaminsa/aljazeera360-mcp-server/issues"

[project.scripts]
aljazeera360-mcp = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
